Make connection string compatible with Azure App Service

--- a/AzureFirstLab.Api/appsettings.json
+++ b/AzureFirstLab.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:azurefirstlab-sql-12345.database.windows.net,1433;Initial Catalog=AzureFirstLabDb;Persist Security Info=False;User ID=sqladmin;Password=*MiloyLola2025;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
